--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
           />
           <input type="button" id="nicknameBtn" class="button" value="적용" />
         </div>
-        <section id="chatContainer"></section>
+        <section id="chatContainer" class="box"></section>
         <div id="inputBox">
           <input
             id="chatInput"
