--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
         </div>
         <section id="chatContainer" class="box"></section>
         <div id="inputBox">
+          <select name="chatTarget" id="chatTarget" required>
+            <option value="ALL" selected>전체</option>
+          </select>
           <input
             id="chatInput"
             type="text"
